--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <h2>Titulo h2</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, earum.
+    </p>
 </body>
 </html>
